adds more styling

--- a/index.html
+++ b/index.html
@@ -4,10 +4,26 @@
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="twitter:" content="ie=edge">
-    <title>Document</title>
+    <title>USA Road Journeys</title>
     <link rel="stylesheet" href="css/style.css">
   </head>
   <body>
+  <nav class="top-nav">
+    <ul>
+      <li><a href="index.html">Home</a></li>
+      <li><a href="#">Trip Journeys</a></li>
+      <li><a href="#">Contact</a></li>
+    </ul>
+  </nav>
+
+  <div class="landing">
+
+    <div>
+      <h1>Road Trip</h1>
+      <h3>Zoom Zoom</h3>
+    </div>
+
+  </div>
 
   </body>
 </html>
