makes .landing responsive and makes responsive rows

--- a/index.html
+++ b/index.html
@@ -25,5 +25,11 @@
 
   </div>
 
+  <div class="row">
+    <div class="col-3">Test</div>
+    <div class="col-3">Test</div>
+    <div class="col-3">Test</div>
+  </div>
+
   </body>
 </html>
