adds more content to index and working nav bar links

--- a/index.html
+++ b/index.html
@@ -1,18 +1,18 @@
 <!DOCTYPE html>
-<html>
-  <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="twitter:" content="ie=edge">
-    <title>USA Road Journeys</title>
-    <link rel="stylesheet" href="css/style.css">
-  </head>
-  <body>
+<html lang="en">
+<head>
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>USA Road Journeys</title>
+  <link rel="stylesheet" href="css/style.css">
+</head>
+<body>
+
   <nav class="top-nav">
     <ul>
       <li><a href="index.html">Home</a></li>
-      <li><a href="#">Trip Journeys</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="destinations.html">Destinations</a></li>
+      <li><a href="news.html">News</a></li>
     </ul>
   </nav>
 
@@ -20,16 +20,43 @@
 
     <div>
       <h1>Road Trip</h1>
-      <h3>Zoom Zoom</h3>
+      <h3>zoom zoom</h3>
     </div>
 
   </div>
 
   <div class="row">
-    <div class="col-3">Test</div>
-    <div class="col-3">Test</div>
-    <div class="col-3">Test</div>
+    <div class="col-3">
+      <div class="mini-content-title">
+        <h4>Trip Suggestions</h4>
+      </div>
+      <div class="mini-content-info">
+        <img src="images/hiker.jpeg" alt="Hiker">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="mini-content-title">
+        <h4>Car Rental</h4>
+      </div>
+      <div class="mini-content-info">
+        <img src="images/key.jpeg " alt="A Car key">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+
+    <div class="col-3">
+      <div class="mini-content-title">
+        <h4>Gallery</h4>
+      </div>
+      <div class="mini-content-info">
+        <img src="images/galler.jpeg" alt="Photos">
+        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id est laborum.</p>
+      </div>
+    </div>
+
   </div>
 
-  </body>
+</body>
 </html>
